# geocoding-kit

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
examples/: README.md  __init__.py  addresses.csv  geocode_addresses.py  geocode_notebook.ipynb  result.csv
specs/001-arcgis-python-geocode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-arcgis-python-geocode/checklists/: requirements.md
specs/001-arcgis-python-geocode/contracts/: cli.md
specs/002-add-geocode-notebook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-geocode-notebook/checklists/: requirements.md
specs/002-add-geocode-notebook/contracts/: notebook-interface.md
src/geocoding_kit/: __init__.py  cli.py  config.py  geocode.py  models.py
tests/: __init__.py
tests/integration/: test_geocode_example.py
tests/unit/: test_config.py  test_geocode_sample_address.py
